# metadata-lineage-engine

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  FEATURES.md  FUTURE_PROPOSAL.md  README.md  RUN_ENTERPRISE_TEST.md  TESTING_GUIDE.md  USAGE_GUIDE.md  claude_desktop_config.json  docker-compose.yml  large_benchmark.qvs  mypy.ini  pyproject.toml  pytest_out.txt  requirements.txt  run_enterprise_test.py  test_parser.py
.github/workflows/: benchmark.yml  tests.yml
benchmarks/: run_benchmarks.py  test_federated_scale.py  test_graph_density.py  test_graph_write.py  test_incremental.py  test_temporal_benchmark.py  test_throughput.py
benchmarks/results/: graph_write_1779982671.json  graph_write_1779982694.json
charts/metadata-lineage-engine/: Chart.yaml  values.yaml
docs/adrs/: 01_policy_evaluation_order.md  02_namespace_traversal.md  03_trust_propagation.md  04_replay_authorization.md  05_masking_precedence.md  06_workload_scheduling.md
lineage_platform/: mcp_server.py
lineage_platform/api/: app.py
lineage_platform/batch/: file_discovery.py
lineage_platform/cli/: main.py
lineage_platform/contracts/: export_contracts.py
lineage_platform/core/: constants.py  hashing.py  incremental.py  normalization.py
lineage_platform/errors/: failure_taxonomy.py
lineage_platform/governance/: drift_analysis.py  policy_engine.py  query_engine.py  stewardship.py  trust_engine.py
lineage_platform/models/: adapters.py  adapters_openlineage.py  intermediate.py  qlik_models.py  snapshot.py
tests/: test_qvs_parser.py
tests/api/: test_routes.py
(+48 files in other folders)
